product_docs/docs/pem/10/pem_rest_api/v1/probe-history.mdx
---
navTitle: Probe history
pdfExclude: true
title: 'EDB Postgres Enterprise Manager REST APIs v1.0: Probe history'

---



## `get__probe_history_agent_{agent_id}_from_{start_time}_to_{end_time}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/probe/history/agent/{agent_id}/from/{start_time}/to/{end_time}/{probe_id} \
  -H 'Accept: application/json'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/probe/history/agent/{agent_id}/from/{start_time}/to/{end_time}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/probe/history/agent/{agent_id}/from/{start_time}/to/{end_time}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/history/agent/{agent_id}/from/{start_time}/to/{end_time}/{probe_id}`

Gets `Probe history` for agent.

<span id="get__probe_history_agent_{agent_id}_from_{start_time}_to_{end_time}_{probe_id}-parameters"></span>

### Parameters



| Name       | In   | Type    | Required | Description                                        |
| ---------- | ---- | ------- | -------- | -------------------------------------------------- |
| agent_id   | path | integer | true     | Agent ID                                           |
| start_time | path | string  | true     | Start time in ISO-8601 format to get probe history |
| end_time   | path | string  | true     | End time in ISO-8601 format to get probe history   |
| probe_id   | path | integer | true     | Probe ID for which data will be returned           |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_history_agent_{agent_id}_from_{start_time}_to_{end_time}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_history_agent_{agent_id}_from_{start_time}_to_{end_time}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_history_server_{server_id}_from_{start_time}_to_{end_time}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/from/{start_time}/to/{end_time}/{probe_id} \
  -H 'Accept: application/json'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/from/{start_time}/to/{end_time}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/from/{start_time}/to/{end_time}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/history/server/{server_id}/from/{start_time}/to/{end_time}/{probe_id}`

Gets `Probe history` for server.

<span id="get__probe_history_server_{server_id}_from_{start_time}_to_{end_time}_{probe_id}-parameters"></span>

### Parameters



| Name       | In   | Type    | Required | Description                                        |
| ---------- | ---- | ------- | -------- | -------------------------------------------------- |
| server_id  | path | integer | true     | Server ID                                          |
| start_time | path | string  | true     | Start time in ISO-8601 format to get probe history |
| end_time   | path | string  | true     | End time in ISO-8601 format to get probe history   |
| probe_id   | path | integer | true     | Probe ID for which data will be returned           |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_history_server_{server_id}_from_{start_time}_to_{end_time}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_history_server_{server_id}_from_{start_time}_to_{end_time}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_history_server_{server_id}_database_{database_name}_from_{start_time}_to_{end_time}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/from/{start_time}/to/{end_time}/{probe_id} \
  -H 'Accept: application/json'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/from/{start_time}/to/{end_time}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/from/{start_time}/to/{end_time}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/history/server/{server_id}/database/{database_name}/from/{start_time}/to/{end_time}/{probe_id}`

Gets `Probe history` for database.

<span id="get__probe_history_server_{server_id}_database_{database_name}_from_{start_time}_to_{end_time}_{probe_id}-parameters"></span>

### Parameters



| Name          | In   | Type    | Required | Description                                        |
| ------------- | ---- | ------- | -------- | -------------------------------------------------- |
| server_id     | path | integer | true     | Server ID                                          |
| database_name | path | string  | true     | Database Name                                      |
| start_time    | path | string  | true     | Start time in ISO-8601 format to get probe history |
| end_time      | path | string  | true     | End time in ISO-8601 format to get probe history   |
| probe_id      | path | integer | true     | Probe ID for which data will be returned           |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_history_server_{server_id}_database_{database_name}_from_{start_time}_to_{end_time}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_history_server_{server_id}_database_{database_name}_from_{start_time}_to_{end_time}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_from_{start_time}_to_{end_time}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/from/{start_time}/to/{end_time}/{probe_id} \
  -H 'Accept: application/json'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/from/{start_time}/to/{end_time}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/from/{start_time}/to/{end_time}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/from/{start_time}/to/{end_time}/{probe_id}`

Gets `Probe history` for schema.

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_from_{start_time}_to_{end_time}_{probe_id}-parameters"></span>

### Parameters



| Name          | In   | Type    | Required | Description                                        |
| ------------- | ---- | ------- | -------- | -------------------------------------------------- |
| server_id     | path | integer | true     | Server ID                                          |
| database_name | path | string  | true     | Database Name                                      |
| schema_name   | path | string  | true     | Schema Name                                        |
| start_time    | path | string  | true     | Start time in ISO-8601 format to get probe history |
| end_time      | path | string  | true     | End time in ISO-8601 format to get probe history   |
| probe_id      | path | integer | true     | Probe ID for which data will be returned           |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_from_{start_time}_to_{end_time}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_from_{start_time}_to_{end_time}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_table_{table_name}_from_{start_time}_to_{end_time}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/table/{table_name}/from/{start_time}/to/{end_time}/{probe_id} \
  -H 'Accept: application/json'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/table/{table_name}/from/{start_time}/to/{end_time}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/table/{table_name}/from/{start_time}/to/{end_time}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/table/{table_name}/from/{start_time}/to/{end_time}/{probe_id}`

Gets `Probe history` for table.

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_table_{table_name}_from_{start_time}_to_{end_time}_{probe_id}-parameters"></span>

### Parameters



| Name          | In   | Type    | Required | Description                                        |
| ------------- | ---- | ------- | -------- | -------------------------------------------------- |
| server_id     | path | integer | true     | Server ID                                          |
| database_name | path | string  | true     | Database Name                                      |
| schema_name   | path | string  | true     | Schema Name                                        |
| table_name    | path | string  | true     | Table Name                                         |
| start_time    | path | string  | true     | Start time in ISO-8601 format to get probe history |
| end_time      | path | string  | true     | End time in ISO-8601 format to get probe history   |
| probe_id      | path | integer | true     | Probe ID for which data will be returned           |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_table_{table_name}_from_{start_time}_to_{end_time}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_table_{table_name}_from_{start_time}_to_{end_time}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_index_{index_name}_from_{start_time}_to_{end_time}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/index/{index_name}/from/{start_time}/to/{end_time}/{probe_id} \
  -H 'Accept: application/json'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/index/{index_name}/from/{start_time}/to/{end_time}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/index/{index_name}/from/{start_time}/to/{end_time}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/index/{index_name}/from/{start_time}/to/{end_time}/{probe_id}`

Gets `Probe history` for index.

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_index_{index_name}_from_{start_time}_to_{end_time}_{probe_id}-parameters"></span>

### Parameters



| Name          | In   | Type    | Required | Description                                        |
| ------------- | ---- | ------- | -------- | -------------------------------------------------- |
| server_id     | path | integer | true     | Server ID                                          |
| database_name | path | string  | true     | Database Name                                      |
| schema_name   | path | string  | true     | Schema Name                                        |
| index_name    | path | string  | true     | Index Name                                         |
| start_time    | path | string  | true     | Start time in ISO-8601 format to get probe history |
| end_time      | path | string  | true     | End time in ISO-8601 format to get probe history   |
| probe_id      | path | integer | true     | Probe ID for which data will be returned           |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_index_{index_name}_from_{start_time}_to_{end_time}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_index_{index_name}_from_{start_time}_to_{end_time}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_sequence_{sequence_name}_from_{start_time}_to_{end_time}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/sequence/{sequence_name}/from/{start_time}/to/{end_time}/{probe_id} \
  -H 'Accept: application/json'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/sequence/{sequence_name}/from/{start_time}/to/{end_time}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/sequence/{sequence_name}/from/{start_time}/to/{end_time}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/sequence/{sequence_name}/from/{start_time}/to/{end_time}/{probe_id}`

Gets `Probe history` for sequence.

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_sequence_{sequence_name}_from_{start_time}_to_{end_time}_{probe_id}-parameters"></span>

### Parameters



| Name          | In   | Type    | Required | Description                                        |
| ------------- | ---- | ------- | -------- | -------------------------------------------------- |
| server_id     | path | integer | true     | Server ID                                          |
| database_name | path | string  | true     | Database Name                                      |
| schema_name   | path | string  | true     | Schema Name                                        |
| sequence_name | path | string  | true     | Sequence Name                                      |
| start_time    | path | string  | true     | Start time in ISO-8601 format to get probe history |
| end_time      | path | string  | true     | End time in ISO-8601 format to get probe history   |
| probe_id      | path | integer | true     | Probe ID for which data will be returned           |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_sequence_{sequence_name}_from_{start_time}_to_{end_time}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_sequence_{sequence_name}_from_{start_time}_to_{end_time}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_view_{view_name}_from_{start_time}_to_{end_time}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/view/{view_name}/from/{start_time}/to/{end_time}/{probe_id} \
  -H 'Accept: application/json'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/view/{view_name}/from/{start_time}/to/{end_time}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/view/{view_name}/from/{start_time}/to/{end_time}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/view/{view_name}/from/{start_time}/to/{end_time}/{probe_id}`

Gets `Probe history` for view.

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_view_{view_name}_from_{start_time}_to_{end_time}_{probe_id}-parameters"></span>

### Parameters



| Name          | In   | Type    | Required | Description                                        |
| ------------- | ---- | ------- | -------- | -------------------------------------------------- |
| server_id     | path | integer | true     | Server ID                                          |
| database_name | path | string  | true     | Database Name                                      |
| schema_name   | path | string  | true     | Schema Name                                        |
| view_name     | path | string  | true     | View Name                                          |
| start_time    | path | string  | true     | Start time in ISO-8601 format to get probe history |
| end_time      | path | string  | true     | End time in ISO-8601 format to get probe history   |
| probe_id      | path | integer | true     | Probe ID for which data will be returned           |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_view_{view_name}_from_{start_time}_to_{end_time}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_view_{view_name}_from_{start_time}_to_{end_time}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_function_{function_name}_args_{function_arguments}_from_{start_time}_to_{end_time}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/function/{function_name}/args/{function_arguments}/from/{start_time}/to/{end_time}/{probe_id} \
  -H 'Accept: application/json'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/function/{function_name}/args/{function_arguments}/from/{start_time}/to/{end_time}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/function/{function_name}/args/{function_arguments}/from/{start_time}/to/{end_time}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/history/server/{server_id}/database/{database_name}/schema/{schema_name}/function/{function_name}/args/{function_arguments}/from/{start_time}/to/{end_time}/{probe_id}`

Gets `Probe history` for function.

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_function_{function_name}_args_{function_arguments}_from_{start_time}_to_{end_time}_{probe_id}-parameters"></span>

### Parameters



| Name               | In   | Type    | Required | Description                                        |
| ------------------ | ---- | ------- | -------- | -------------------------------------------------- |
| server_id          | path | integer | true     | Server ID                                          |
| database_name      | path | string  | true     | Database Name                                      |
| schema_name        | path | string  | true     | Schema Name                                        |
| function_name      | path | string  | true     | Function Name                                      |
| function_arguments | path | string  | true     | Function arguments comma separated                 |
| start_time         | path | string  | true     | Start time in ISO-8601 format to get probe history |
| end_time           | path | string  | true     | End time in ISO-8601 format to get probe history   |
| probe_id           | path | integer | true     | Probe ID for which data will be returned           |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_function_{function_name}_args_{function_arguments}_from_{start_time}_to_{end_time}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_history_server_{server_id}_database_{database_name}_schema_{schema_name}_function_{function_name}_args_{function_arguments}_from_{start_time}_to_{end_time}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication


